File Field 0.9.9 | Changes

» misc
 | updates for SAEF compatibility in IE7/8
 | path bugfix when operating in sub-directory
 | 